# This will be the target for running C++ tests, currently a stub.
executable("chrohime_test") {
  testonly = true
  sources = [ "main.cc" ]
  deps = [ "//chrohime:chrohime_with_content_with_lifetime" ]

  if (is_win) {
    deps += [ "//build/win:default_exe_manifest" ]
    configs += [ "//build/config/win:windowed" ]
    configs -= [ "//build/config/win:console" ]
  }
}
